crates/oxidoc/tests/snapshots/golden_writer__latex__common__bullet-list-loose.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
\begin{itemize}
\item
  a
\item
  b
\item
  c
\end{itemize}
