crates/oxidoc/tests/snapshots/golden_writer__latex__common__bullet-nested.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
\begin{itemize}
\item
  outer

  \begin{itemize}
  \tightlist
  \item
    inner one
  \item
    inner two
  \end{itemize}
\end{itemize}
