crates/oxidoc/tests/snapshots/golden_writer__latex__common__citation.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
see {[}@knuth1984{]} for details
