crates/oxidoc/tests/snapshots/golden_writer__latex__common__code-block-id.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
\protect\phantomsection\label{snippet}%
\begin{verbatim}
plain code
\end{verbatim}
