crates/oxidoc/tests/snapshots/golden_writer__latex__common__code-block-indented.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
\begin{verbatim}
indented code
second line
\end{verbatim}
