crates/oxidoc/tests/snapshots/golden_writer__latex__common__code-block-lang.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
\begin{verbatim}
let s = "hi";
x < y && y > z
\end{verbatim}
