crates/oxidoc/tests/snapshots/golden_writer__latex__common__code-block-numbered.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
\begin{verbatim}
print(1)
print(2)
\end{verbatim}
