crates/oxidoc/tests/snapshots/golden_writer__latex__common__definition-term-colon.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
\begin{description}
\tightlist
\item[term: with colon]
definition
\end{description}
